--- a/About.html
+++ b/About.html
@@ -39,7 +39,7 @@
         </div>
         <nav class="navbar">
           <ul class="nav-list">
-            <li class="nav-item"><a href="#FIXME" class="nav-link" title="Home">Home</a></li>
+            <li class="nav-item"><a href="Home.html" class="nav-link" title="Home">Home</a></li>
             <li class="nav-item"><a href="About.html" class="nav-link" title="About">About</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Deals">Deals</a></li>
             <li class="nav-item"><a href="Reservation.html" class="nav-link" title="Reservation">Reservation</a></li>
