reservation page structure and all page validated and resolved error

--- a/Home.html
+++ b/Home.html
@@ -39,7 +39,7 @@
         </div>
         <nav class="navbar">
           <ul class="nav-list">
-            <li class="nav-item"><a href="#FIXME" class="nav-link" title="Home">Home</a></li>
+            <li class="nav-item"><a href="#FIXME" class="nav-link active" title="Home">Home</a></li>
             <li class="nav-item"><a href="About.html" class="nav-link" title="About">About</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Deals">Deals</a></li>
             <li class="nav-item"><a href="Reservation.html" class="nav-link" title="Reservation">Reservation</a></li>
@@ -48,11 +48,11 @@
         </nav>
       </div>
     </header>
-    <!--header section start-->
+    <!--header section end-->
     <!--main section start-->
     <main>
       <!-- banner slide start here -->
-      <div class="banner-slide">
+      <section class="banner-slide">
         <ul class="banner">
           <li class="banner-item">
             <figure class="banner-fig">
@@ -61,27 +61,27 @@
             <div class="banner-content">
               <span class="banner-span">Take a Glimpse Into The Beutiful Country Of:</span>
               <h2 class="banner-heading">Switzerland</h2>
+              <div class="banner-btn">
+                <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
+              </div>
+              <ul class="counter-list">
+                <li class="counter-item">
+                  <h5 class="counter-heading">population:</h5>
+                  <span class="counter-Num" data-target="8.66">0</span>
+                </li>
+                <li class="counter-item">
+                  <h5 class="counter-heading">Territory:</h5>
+                  <span class="counter-Num" data-target="41.290">0</span>
+                </li>
+                <li class="counter-item">
+                  <h5 class="counter-heading">AVG Price:</h5>
+                  <span class="counter-Num" data-target="1.100.200">0</span>
+                </li>
+                <li class="counter-item">
+                  <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
+                </li>
+              </ul>
             </div>
-            <div class="banner-btn">
-              <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
-            </div>
-            <ul class="counter-list">
-              <li class="counter-item">
-                <h5 class="counter-heading">population:</h5>
-                <span class="counter-Num" data-target="8.66">0</span>
-              </li>
-              <li class="counter-item">
-                <h5 class="counter-heading">Territory:</h5>
-                <span class="counter-Num" data-target="41.290">0</span>
-              </li>
-              <li class="counter-item">
-                <h5 class="counter-heading">AVG Price:</h5>
-                <span class="counter-Num" data-target="1.100.200">0</span>
-              </li>
-              <li class="counter-item">
-                <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
-              </li>
-            </ul>
           </li>
           <li class="banner-item">
             <figure class="banner-fig">
@@ -90,27 +90,27 @@
             <div class="banner-content">
               <span class="banner-span">Take a Glimpse Into The Beutiful Country Of:</span>
               <h2 class="banner-heading">Switzerland</h2>
+              <div class="banner-btn">
+                <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
+              </div>
+              <ul class="counter-list">
+                <li class="counter-item">
+                  <h5 class="counter-heading">population:</h5>
+                  <span class="counter-Num" data-target="8.66">0</span>
+                </li>
+                <li class="counter-item">
+                  <h5 class="counter-heading">Territory:</h5>
+                  <span class="counter-Num" data-target="41.290">0</span>
+                </li>
+                <li class="counter-item">
+                  <h5 class="counter-heading">AVG Price:</h5>
+                  <span class="counter-Num" data-target="1.100.200">0</span>
+                </li>
+                <li class="counter-item">
+                  <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
+                </li>
+              </ul>
             </div>
-            <div class="banner-btn">
-              <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
-            </div>
-            <ul class="counter-list">
-              <li class="counter-item">
-                <h5 class="counter-heading">population:</h5>
-                <span class="counter-Num" data-target="8.66">0</span>
-              </li>
-              <li class="counter-item">
-                <h5 class="counter-heading">Territory:</h5>
-                <span class="counter-Num" data-target="41.290">0</span>
-              </li>
-              <li class="counter-item">
-                <h5 class="counter-heading">AVG Price:</h5>
-                <span class="counter-Num" data-target="1.100.200">0</span>
-              </li>
-              <li class="counter-item">
-                <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
-              </li>
-            </ul>
           </li>
           <li class="banner-item">
             <figure class="banner-fig">
@@ -119,27 +119,27 @@
             <div class="banner-content">
               <span class="banner-span">Take a Glimpse Into The Beutiful Country Of:</span>
               <h2 class="banner-heading">Switzerland</h2>
+              <div class="banner-btn">
+                <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
+              </div>
+              <ul class="counter-list">
+                <li class="counter-item">
+                  <h5 class="counter-heading">population:</h5>
+                  <span class="counter-Num" data-target="8.66">0</span>
+                </li>
+                <li class="counter-item">
+                  <h5 class="counter-heading">Territory:</h5>
+                  <span class="counter-Num" data-target="41.290">0</span>
+                </li>
+                <li class="counter-item">
+                  <h5 class="counter-heading">AVG Price:</h5>
+                  <span class="counter-Num" data-target="1.100.200">0</span>
+                </li>
+                <li class="counter-item">
+                  <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
+                </li>
+              </ul>
             </div>
-            <div class="banner-btn">
-              <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
-            </div>
-            <ul class="counter-list">
-              <li class="counter-item">
-                <h5 class="counter-heading">population:</h5>
-                <span class="counter-Num" data-target="8.66">0</span>
-              </li>
-              <li class="counter-item">
-                <h5 class="counter-heading">Territory:</h5>
-                <span class="counter-Num" data-target="41.290">0</span>
-              </li>
-              <li class="counter-item">
-                <h5 class="counter-heading">AVG Price:</h5>
-                <span class="counter-Num" data-target="1.100.200">0</span>
-              </li>
-              <li class="counter-item">
-                <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
-              </li>
-            </ul>
           </li>
           <li class="banner-item">
             <figure class="banner-fig">
@@ -148,27 +148,27 @@
             <div class="banner-content">
               <span class="banner-span">Take a Glimpse Into The Beutiful Country Of:</span>
               <h2 class="banner-heading">Switzerland</h2>
+              <div class="banner-btn">
+                <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
+              </div>
+              <ul class="counter-list">
+                <li class="counter-item">
+                  <h5 class="counter-heading">population:</h5>
+                  <span class="counter-Num" data-target="8.66">0</span>
+                </li>
+                <li class="counter-item">
+                  <h5 class="counter-heading">Territory:</h5>
+                  <span class="counter-Num" data-target="41.290">0</span>
+                </li>
+                <li class="counter-item">
+                  <h5 class="counter-heading">AVG Price:</h5>
+                  <span class="counter-Num" data-target="1.100.200">0</span>
+                </li>
+                <li class="counter-item">
+                  <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
+                </li>
+              </ul>
             </div>
-            <div class="banner-btn">
-              <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
-            </div>
-            <ul class="counter-list">
-              <li class="counter-item">
-                <h5 class="counter-heading">population:</h5>
-                <span class="counter-Num" data-target="8.66">0</span>
-              </li>
-              <li class="counter-item">
-                <h5 class="counter-heading">Territory:</h5>
-                <span class="counter-Num" data-target="41.290">0</span>
-              </li>
-              <li class="counter-item">
-                <h5 class="counter-heading">AVG Price:</h5>
-                <span class="counter-Num" data-target="1.100.200">0</span>
-              </li>
-              <li class="counter-item">
-                <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
-              </li>
-            </ul>
           </li>
         </ul>
         <ul class="banner-control">
@@ -177,7 +177,7 @@
           <li class="control-item">3</li>
           <li class="control-item">4</li>
         </ul>
-      </div>
+      </section>
       <!-- banner slide end here -->
       <!-- visit country section start here -->
       <section class="visit-Country">
@@ -294,6 +294,11 @@
           title="TemplateMo" class="copy-link">TemplateMo</a></p>
     </footer>
     <!--footer section end-->
+    <!-- scroll to up start here -->
+    <div class="scroll-up">
+      <span class="scroll-too" title="Scroll Up">scroll too</span>
+    </div>
+    <!-- scroll to up end here -->
 
   </div>
   <!--container end-->
