--- a/Reservation.html
+++ b/Reservation.html
@@ -42,7 +42,7 @@
             <li class="nav-item"><a href="Home.html" class="nav-link" title="Home">Home</a></li>
             <li class="nav-item"><a href="About.html" class="nav-link" title="About">About</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Deals">Deals</a></li>
-            <li class="nav-item"><a href="#FIXME" class="nav-link" title="Reservation">Reservation</a></li>
+            <li class="nav-item"><a href="#FIXME" class="nav-link active" title="Reservation">Reservation</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Book Yours">Book Yours</a></li>
           </ul>
         </nav>
@@ -124,7 +124,7 @@
               <div class="input-content">
                 <label for="date">Check In Date</label>
                 <div class="input-text">
-                  <input type="date" name="Email" id="Email" class="input Email" placeholder="mm/dd/yyyy">
+                  <input type="date" name="Date" id="date" class="input Email">
                 </div>
               </div>
             </div>
@@ -132,7 +132,7 @@
               <div class="input-content">
                 <label for="destination">Choose Your Destination</label>
                 <div class="input-text">
-                  <select name="Destination" id="Destination" class="Destination">
+                  <select name="Destination" id="destination" class="Destination">
                     <option value="select">ex. Switzerland,Lausanne</option>
                     <option value="select">ex. Europe , Lausanne</option>
                     <option value="select">ex. Havana , Kingston</option>
@@ -146,6 +146,7 @@
           </form>
         </div>
       </section>
+      <!-- contact form section end here -->
     </main>
     <!--main section end-->
 
