--- a/About.html
+++ b/About.html
@@ -39,8 +39,8 @@
         </div>
         <nav class="navbar">
           <ul class="nav-list">
-            <li class="nav-item"><a href="Home.html" class="nav-link" title="Home">Home</a></li>
-            <li class="nav-item"><a href="About.html" class="nav-link" title="About">About</a></li>
+            <li class="nav-item"><a href="#FIXME" class="nav-link" title="Home">Home</a></li>
+            <li class="nav-item"><a href="About.html" class="nav-link active" title="About">About</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Deals">Deals</a></li>
             <li class="nav-item"><a href="Reservation.html" class="nav-link" title="Reservation">Reservation</a></li>
             <li class="nav-item"><a href="#FIXME" class="nav-link" title="Book Yours">Book Yours</a></li>
@@ -48,7 +48,7 @@
         </nav>
       </div>
     </header>
-    <!--header section start-->
+    <!--header section end-->
     <!--main section start-->
     <main>
       <!-- banner section start here -->
@@ -431,23 +431,24 @@
       <!-- location section start here -->
       <section class="location">
         <div class="wrapper">
-      <h3 class="location-heading">Best Location In Caribbeans</h3>
-      <p class="location-description">Lorem ispum dolor sit amet, consecteture adipiscing elit, sed do eiusmad tempor
-        incididunt ut labore</p>
-        <div class="map-content">
-          <h5 class="map-heading">Havana</h5>
-          <span class="population">population: 2M</span>
+          <h3 class="location-heading">Best Location In Caribbeans</h3>
+          <p class="location-description">Lorem ispum dolor sit amet, consecteture adipiscing elit, sed do eiusmad
+            tempor
+            incididunt ut labore</p>
+          <div class="map-content">
+            <h5 class="map-heading">Havana</h5>
+            <span class="population">population: 2M</span>
+          </div>
+          <ul class="map-icon-list">
+            <li class="icon">map Icon</li>
+            <li class="icon">map Icon</li>
+            <li class="icon">map Icon</li>
+            <li class="icon">map Icon</li>
+          </ul>
+          <div class="place-btn">
+            <a href="#FIXME" class="place-link" title="Discover All Places">Discover All Places</a>
+          </div>
         </div>
-        <ul class="map-icon-list">
-          <li class="icon">map Icon</li>
-          <li class="icon">map Icon</li>
-          <li class="icon">map Icon</li>
-          <li class="icon">map Icon</li>
-        </ul>
-        <div class="place-btn">
-          <a href="#FIXME" class="place-link" title="Discover All Places">Discover All Places</a>
-        </div>
-      </div>
       </section>
       <!-- location section end here -->
       <!-- book section start here -->
@@ -469,9 +470,14 @@
     <!--footer section start-->
     <footer>
       <p class="copy">Copyright &#169; WoOx Travel company. All rights reserved. Design <a href="#FIXME"
-        title="TemplateMo" class="copy-link">TemplateMo</a></p>
+          title="TemplateMo" class="copy-link">TemplateMo</a></p>
     </footer>
     <!--footer section end-->
+    <!-- scroll to up start here -->
+    <div class="scroll-up">
+      <span class="scroll-too" title="Scroll Up">scroll too</span>
+    </div>
+    <!-- scroll to up end here -->
 
   </div>
   <!--container end-->
