html structure modified for css

--- a/About.html
+++ b/About.html
@@ -459,7 +459,7 @@
             <span class="book-reserve">Make A Reservation By Clicking The Button</span>
           </div>
           <div class="book-btn">
-            <a href="#FIXME" class="reserve-btn" title="Book Yours Now"></a>
+            <a href="#FIXME" class="reserve-btn" title="Book Yours Now">Book Yours Now</a>
           </div>
         </div>
       </section>
