--- a/Reservation.html
+++ b/Reservation.html
@@ -57,7 +57,7 @@
           <span class="prefered">Book Prefered Deal Here</span>
           <h2 class="heading">Make Your Reservation</h2>
           <p class="para">Lorem ipsum dolor sit amet, consecteture adipiscing elit, sed do eiusmad tempor incididunt
-            uttersi labore et dolore magna aliqua is ispum suspendisse ultrices gravida</p>
+            uttersi labore et dolore <span>magna aliqua is ispum suspendisse ultrices gravida</span></p>
           <div class="discover-ctrl">
             <a href="#FIXME" class="discover-btn">Discover More</a>
           </div>
@@ -68,15 +68,15 @@
       <section class="connect">
         <div class="wrapper">
           <ul class="connect-list">
-            <li class="connect-item">
+            <li class="connect-item call">
               <span class="connect-span">Make a Phone Call</span>
               <a href="tel:+1234567890" title="Call Us">+123 456 789 (0)</a>
             </li>
-            <li class="connect-item">
+            <li class="connect-item email">
               <span class="connect-span">Contact Us Via Email</span>
               <a href="mailto:company@email.com" title="Email Us">comapny@email.com</a>
             </li>
-            <li class="connect-item">
+            <li class="connect-item address">
               <span class="connect-span">Visit Our Offices</span>
               <address>24th Street North Avenue London, UK</address>
             </li>
