--- a/Home.html
+++ b/Home.html
@@ -11,7 +11,7 @@
   <link rel="shortcut icon" href="favicon.ico" />
   <!--font-awesome link for icons-->
   <link rel="stylesheet" media="screen" href="assets/vendor/font-awesome/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css"
+  <link rel="stylesheet" href=https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css
     integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
   <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
@@ -64,23 +64,25 @@
               <div class="banner-btn">
                 <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
               </div>
+            </div>
+            <div class="counter-part">
               <ul class="counter-list">
-                <li class="counter-item">
+                <li class="counter-item user">
                   <h5 class="counter-heading">population:</h5>
-                  <span class="counter-Num" data-target="8.66">0</span>
+                  <span class="counter-Num" data-target="8.66">8.66M</span>
                 </li>
-                <li class="counter-item">
+                <li class="counter-item world">
                   <h5 class="counter-heading">Territory:</h5>
-                  <span class="counter-Num" data-target="41.290">0</span>
+                  <span class="counter-Num" data-target="41.290">41.290 KM2</span>
                 </li>
-                <li class="counter-item">
+                <li class="counter-item home">
                   <h5 class="counter-heading">AVG Price:</h5>
-                  <span class="counter-Num" data-target="1.100.200">0</span>
-                </li>
-                <li class="counter-item">
-                  <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
+                  <span class="counter-Num" data-target="1.100.200">$1.100.200</span>
                 </li>
               </ul>
+              <div class="counter control">
+                <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
+              </div>
             </div>
           </li>
           <li class="banner-item">
@@ -93,23 +95,25 @@
               <div class="banner-btn">
                 <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
               </div>
-              <ul class="counter-list">
-                <li class="counter-item">
-                  <h5 class="counter-heading">population:</h5>
-                  <span class="counter-Num" data-target="8.66">0</span>
-                </li>
-                <li class="counter-item">
-                  <h5 class="counter-heading">Territory:</h5>
-                  <span class="counter-Num" data-target="41.290">0</span>
-                </li>
-                <li class="counter-item">
-                  <h5 class="counter-heading">AVG Price:</h5>
-                  <span class="counter-Num" data-target="1.100.200">0</span>
-                </li>
-                <li class="counter-item">
+              <div class="counter-part">
+                <ul class="counter-list">
+                  <li class="counter-item user">
+                    <h5 class="counter-heading">population:</h5>
+                    <span class="counter-Num" data-target="8.66">0</span>
+                  </li>
+                  <li class="counter-item world">
+                    <h5 class="counter-heading">Territory:</h5>
+                    <span class="counter-Num" data-target="41.290">0</span>
+                  </li>
+                  <li class="counter-item home">
+                    <h5 class="counter-heading">AVG Price:</h5>
+                    <span class="counter-Num" data-target="1.100.200">0</span>
+                  </li>
+                </ul>
+                <div class="counter control">
                   <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
-                </li>
-              </ul>
+                </div>
+              </div>
             </div>
           </li>
           <li class="banner-item">
@@ -123,20 +127,19 @@
                 <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
               </div>
               <ul class="counter-list">
-                <li class="counter-item">
+                <li class="counter-item user">
                   <h5 class="counter-heading">population:</h5>
                   <span class="counter-Num" data-target="8.66">0</span>
                 </li>
-                <li class="counter-item">
+                <li class="counter-item world">
                   <h5 class="counter-heading">Territory:</h5>
                   <span class="counter-Num" data-target="41.290">0</span>
                 </li>
-                <li class="counter-item">
+                <li class="counter-item home">
                   <h5 class="counter-heading">AVG Price:</h5>
                   <span class="counter-Num" data-target="1.100.200">0</span>
                 </li>
                 <li class="counter-item">
-                  <a href="#FIXME" class="explore" title="Explore More">Explore More</a>
                 </li>
               </ul>
             </div>
@@ -152,15 +155,15 @@
                 <a href="#FIXME" class="go-btn" title="Go There">Go There</a>
               </div>
               <ul class="counter-list">
-                <li class="counter-item">
+                <li class="counter-item user">
                   <h5 class="counter-heading">population:</h5>
                   <span class="counter-Num" data-target="8.66">0</span>
                 </li>
-                <li class="counter-item">
+                <li class="counter-item world">
                   <h5 class="counter-heading">Territory:</h5>
                   <span class="counter-Num" data-target="41.290">0</span>
                 </li>
-                <li class="counter-item">
+                <li class="counter-item home">
                   <h5 class="counter-heading">AVG Price:</h5>
                   <span class="counter-Num" data-target="1.100.200">0</span>
                 </li>
@@ -185,88 +188,94 @@
           <h3 class="visit-heading">Visit One Of Our Countries Now</h3>
           <p class="visit-description">Lorem ipsum dolar sit amet, consecteture adipiscing elit, sed do eiusmad tempor
             incididunt ut labore</p>
-          <ul class="country-list">
-            <li class="country-item">
-              <figure class="country-fig">
-                <img src="/assets/images/country-01.jpg" alt="Country Image">
-              </figure>
-              <div class="country-content">
-                <div class="country-data">
-                  <div class="data-content">
-                    <h4 class="data-heading">switzerland</h4>
-                    <h5 class="data-sub-heading">Europe</h5>
+          <div class="visit-wrap">
+            <ul class="country-list">
+              <li class="country-item">
+                <figure class="country-fig">
+                  <img src="/assets/images/country-01.jpg" alt="Country Image">
+                </figure>
+                <div class="country-content">
+                  <div class="country-data">
+                    <div class="data-content">
+                      <h4 class="data-heading">switzerland</h4>
+                      <h5 class="data-sub-heading">Europe</h5>
+                    </div>
+                    <a href="#FIXME" class="data-link" title="Explore More">Explore More</a>
                   </div>
-                  <a href="#FIXME" class="data-link" title="Explore More">Explore More</a>
-                </div>
-                <p class="data-description">Woox Travel is a professional Bootstrap 5 theme HTML CSS layout for your
-                  website. You can use this layout for your commercial work.</p>
-                <ul class="people-data">
-                  <li class="people-list">8.66 Mil people</li>
-                  <li class="people-list">41.290 km2</li>
-                  <li class="people-list">$1.100.200</li>
-                  <li class="people-list"> <a href="#FIXME" class="direction-link" title="Need Direction">Need
-                      Directions ?</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="country-item">
-              <figure class="country-fig">
-                <img src="/assets/images/country-02.jpg" alt="Country Image">
-              </figure>
-              <div class="country-content">
-                <div class="country-data">
-                  <div class="data-content">
-                    <h4 class="data-heading">caribbean</h4>
-                    <h5 class="data-sub-heading">North America</h5>
+                  <p class="data-description">Woox Travel is a professional Bootstrap 5 theme HTML CSS layout for your
+                    website. You can use this layout for your commercial work.</p>
+                  <ul class="people-data">
+                    <li class="people-list user">8.66 Mil people</li>
+                    <li class="people-list world">41.290 km2</li>
+                    <li class="people-list home">$1.100.200</li>
+                  </ul>
+                  <div class="direction-wrap">
+                    <a href="#FIXME" class="direction-link" title="Need Direction">Need
+                      Directions ?</a>
                   </div>
-                  <a href="#FIXME" class="data-link" title="Explore More">Explore More</a>
                 </div>
-                <p class="data-description">Lorem ipsumd dolor sit amet, consecteture adipiscing elit, sed do eiusmod
-                  tempor incididunt ut labore dolor sit amet, consecteture adipiscing elite, sed do eiusmod </p>
-                <ul class="people-data">
-                  <li class="people-list">44.48 Mil people</li>
-                  <li class="people-list">275.400 km2</li>
-                  <li class="people-list">$946.000</li>
-                  <li class="people-list"> <a href="#FIXME" class="direction-link" title="Need Direction">Need
-                      Directions ?</a></li>
-                </ul>
-              </div>
-            </li>
-            <li class="country-item">
-              <figure class="country-fig">
-                <img src="/assets/images/country-03.jpg" alt="Country Image">
-              </figure>
-              <div class="country-content">
-                <div class="country-data">
-                  <div class="data-content">
-                    <h4 class="data-heading">france</h4>
-                    <h5 class="data-sub-heading">Europe</h5>
+              </li>
+              <li class="country-item">
+                <figure class="country-fig">
+                  <img src="/assets/images/country-02.jpg" alt="Country Image">
+                </figure>
+                <div class="country-content">
+                  <div class="country-data">
+                    <div class="data-content">
+                      <h4 class="data-heading">caribbean</h4>
+                      <h5 class="data-sub-heading">North America</h5>
+                    </div>
+                    <a href="#FIXME" class="data-link" title="Explore More">Explore More</a>
                   </div>
-                  <a href="#FIXME" class="data-link" title="Explore More">Explore More</a>
+                  <p class="data-description">Lorem ipsumd dolor sit amet, consecteture adipiscing elit, sed do eiusmod
+                    tempor incididunt ut labore dolor sit amet, consecteture adipiscing elite, sed do eiusmod </p>
+                  <ul class="people-data">
+                    <li class="people-list user">44.48 Mil people</li>
+                    <li class="people-list world">275.400 km2</li>
+                    <li class="people-list home">$946.000</li>
+                  </ul>
+                  <div class="direction-wrap">
+                    <a href="#FIXME" class="direction-link" title="Need Direction">Need Directions ?</a>
+                  </div>
                 </div>
-                <p class="data-description">We hope this woOx templateis useful for you, please support us a <a
-                    href="#FIXME" title="Paypal">small amount of paypal</a>to info [at] <a href="#FIXME"
-                    class="template">templatemo.com</a>for our survival. we really appreciate your contribution.</p>
-                <ul class="people-data">
-                  <li class="people-list">67.41 Mil people</li>
-                  <li class="people-list">551.500 km2</li>
-                  <li class="people-list">$425.600</li>
-                  <li class="people-list"> <a href="#FIXME" class="direction-link" title="Need Direction">Need
-                      Directions ?</a></li>
-                </ul>
+              </li>
+              <li class="country-item">
+                <figure class="country-fig">
+                  <img src="/assets/images/country-03.jpg" alt="Country Image">
+                </figure>
+                <div class="country-content">
+                  <div class="country-data">
+                    <div class="data-content">
+                      <h4 class="data-heading">france</h4>
+                      <h5 class="data-sub-heading">Europe</h5>
+                    </div>
+                    <a href="#FIXME" class="data-link" title="Explore More">Explore More</a>
+                  </div>
+                  <p class="data-description">We hope this woOx templateis useful for you, please support us a <a
+                      href="#FIXME" title="Paypal">small amount of paypal</a>to info [at] template.com for our survival. we really appreciate your contribution.</p>
+                  <ul class="people-data">
+                    <li class="people-list user">67.41 Mil people</li>
+                    <li class="people-list world">551.500 km2</li>
+                    <li class="people-list home">$425.600</li>
+                  </ul>
+                  <div class="direction-wrap">
+                    <a href="#FIXME" class="direction-link" title="Need Direction">Need
+                      Directions ?</a>
+                  </div>
+                </div>
+              </li>
+            </ul>
+            <div class="mapouter">
+              <div class="gmap_canvas">
+                <iframe class="gmap-iframe"
+                  src="https://maps.google.com/maps?width=356&amp;height=507&amp;hl=en&amp;q=sunnyislessbeach&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
+                </iframe>
               </div>
-            </li>
-          </ul>
-          <div class="mapouter">
-            <div class="gmap_canvas">
-              <iframe class="gmap-iframe"
-                src="https://maps.google.com/maps?width=356&amp;height=507&amp;hl=en&amp;q=sunnyislessbeach&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed">
-              </iframe>
-            </div>
-            <div class="btn-ctrl">
-              <button class="page-btn">1</button>
-              <button class="page-btn">2</button>
-              <button class="page-btn">3</button>
+              <div class="btn-ctrl">
+                <button class="page-btn">1</button>
+                <button class="page-btn">2</button>
+                <button class="page-btn">3</button>
+              </div>
             </div>
           </div>
         </div>
@@ -280,7 +289,7 @@
             <span class="book-reserve">Make A Reservation By Clicking The Button</span>
           </div>
           <div class="book-btn">
-            <a href="#FIXME" class="reserve-btn" title="Book Yours Now"></a>
+            <a href="#FIXME" class="reserve-btn" title="Book Yours Now">Book Yours Now</a>
           </div>
         </div>
       </section>
@@ -290,8 +299,8 @@
 
     <!--footer section start-->
     <footer>
-      <p class="copy">Copyright &#169; WoOx Travel company. All rights reserved. Design <a href="#FIXME"
-          title="TemplateMo" class="copy-link">TemplateMo</a></p>
+      <p class="copy">Copyright &#169; WoOx Travel company. All rights reserved.<a href="#FIXME"
+          title="TemplateMo" class="copy-link">Design: TemplateMo</a></p>
     </footer>
     <!--footer section end-->
     <!-- scroll to up start here -->
