tab filter added and some modification added

--- a/Home.html
+++ b/Home.html
@@ -251,7 +251,8 @@
                     <a href="#FIXME" class="data-link" title="Explore More">Explore More</a>
                   </div>
                   <p class="data-description">We hope this woOx templateis useful for you, please support us a <a
-                      href="#FIXME" title="Paypal">small amount of paypal</a> to info [at] template.com for our survival. we really appreciate your contribution.</p>
+                      href="#FIXME" title="Paypal">small amount of paypal</a> to info [at] template.com for our
+                    survival. we really appreciate your contribution.</p>
                   <ul class="people-data">
                     <li class="people-list user">67.41 Mil people</li>
                     <li class="people-list world">551.500 km2</li>
@@ -298,8 +299,8 @@
 
     <!--footer section start-->
     <footer>
-      <p class="copy">Copyright &#169; WoOx Travel company. All rights reserved.<a href="#FIXME"
-          title="TemplateMo" class="copy-link">Design: TemplateMo</a></p>
+      <p class="copy">Copyright &#169; WoOx Travel company. All rights reserved.<a href="#FIXME" title="TemplateMo"
+          class="copy-link">Design: TemplateMo</a></p>
     </footer>
     <!--footer section end-->
     <!-- scroll to up start here -->
