--- a/Reservation.html
+++ b/Reservation.html
@@ -88,65 +88,65 @@
       <section class="contact-form">
         <div class="wrapper">
           <div class="form-container">
-          <div class="mapouter">
-            <div class="gmap_canvas">
-              <iframe class="gmap_iframe"
-                src="https://maps.google.com/maps?width=1138&amp;height=395&amp;hl=en&amp;q=sunnyislessbeach&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
-            </div>
-          </div>
-          <form action="#FIXME" method="post" class="my-form" name="form">
-            <h3 class="form-heading">Make Your <span class="form-span">Reservation</span> Through This <span
-                class="form-span">Form</span></h3>
-            <div class="input-group">
-              <div class="input-content">
-                <label for="Name">Your Name</label>
-                <div class="input-text">
-                  <input type="text" name="Name" id="Name" class="input name" placeholder="Ex. John Smithee">
-                </div>
-              </div>
-              <div class="input-content">
-                <label for="Number">Your Phone Number</label>
-                <div class="input-text">
-                  <input type="text" name="Number" id="Number" class="input Number" placeholder="Ex. +XXX XXX XXX">
-                </div>
+            <div class="mapouter">
+              <div class="gmap_canvas">
+                <iframe class="gmap_iframe"
+                  src="https://maps.google.com/maps?width=1138&amp;height=395&amp;hl=en&amp;q=sunnyislessbeach&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
               </div>
             </div>
-            <div class="input-group">
-              <div class="input-content creat-down">
-                <label for="guest">Number Of Guests</label>
-                <div class="input-text">
-                  <select name="Guest" id="guest" class="guest">
-                    <option value="select">ex. 3 or 4 or 5</option>
-                    <option value="select">ex. 4 or 5 or 6</option>
-                    <option value="select">ex. 7 or 8 or 9</option>
-                  </select>
+            <form action="#FIXME" method="post" class="my-form" name="form">
+              <h3 class="form-heading">Make Your <span class="form-span">Reservation</span> Through This <span
+                  class="form-span">Form</span></h3>
+              <div class="input-group">
+                <div class="input-content">
+                  <label for="Name">Your Name</label>
+                  <div class="input-text">
+                    <input type="text" name="Name" id="Name" class="input name" placeholder="Ex. John Smithee">
+                  </div>
+                </div>
+                <div class="input-content">
+                  <label for="Number">Your Phone Number</label>
+                  <div class="input-text">
+                    <input type="text" name="Number" id="Number" class="input Number" placeholder="Ex. +XXX XXX XXX">
+                  </div>
                 </div>
               </div>
-              <div class="input-content">
-                <label for="date">Check In Date</label>
-                <div class="input-text">
-                  <input type="date" name="Date" id="date" class="input date">
+              <div class="input-group">
+                <div class="input-content creat-down">
+                  <label for="guest">Number Of Guests</label>
+                  <div class="input-text">
+                    <select name="Guest" id="guest" class="guest">
+                      <option value="select">ex. 3 or 4 or 5</option>
+                      <option value="select">ex. 4 or 5 or 6</option>
+                      <option value="select">ex. 7 or 8 or 9</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="input-content">
+                  <label for="date">Check In Date</label>
+                  <div class="input-text">
+                    <input type="date" name="Date" id="date" class="input date">
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="input-destination">
-              <div class="input-content">
-                <label for="destination">Choose Your Destination</label>
-                <div class="input-text">
-                  <select name="Destination" id="destination" class="destination">
-                    <option value="select">ex. Switzerland,Lausanne</option>
-                    <option value="select">ex. Europe , Lausanne</option>
-                    <option value="select">ex. Havana , Kingston</option>
-                  </select>
+              <div class="input-destination">
+                <div class="input-content">
+                  <label for="destination">Choose Your Destination</label>
+                  <div class="input-text">
+                    <select name="Destination" id="destination" class="destination">
+                      <option value="select">ex. Switzerland,Lausanne</option>
+                      <option value="select">ex. Europe , Lausanne</option>
+                      <option value="select">ex. Havana , Kingston</option>
+                    </select>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="input-control">
-              <div class="btn-wrap">
-              <input type="submit" name="sub-btn" class="sub-btn" value="Make Your Reservation Now">
-            </div>
-          </div>
-          </form>
+              <div class="input-control">
+                <div class="btn-wrap">
+                  <input type="submit" name="sub-btn" class="sub-btn" value="Make Your Reservation Now">
+                </div>
+              </div>
+            </form>
           </div>
         </div>
       </section>
@@ -156,8 +156,8 @@
 
     <!--footer section start-->
     <footer>
-      <p class="copy">Copyright &#169; WoOx Travel company. All rights reserved.<a href="#FIXME"
-        title="TemplateMo" class="copy-link">Design: TemplateMo</a></p>
+      <p class="copy">Copyright &#169; WoOx Travel company. All rights reserved.<a href="#FIXME" title="TemplateMo"
+          class="copy-link">Design: TemplateMo</a></p>
     </footer>
     <!--footer section end-->
 
